--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                 <div class="card-content">
 
                   <h3 class="h3">
-                    <a href="#" class="card-title">Indonesian Roblox Community</a>
+                    <a href="https://www.roblox.com/groups/6613107/aFz-Team-Indonesia#!/about" class="card-title">Indonesian Roblox Community</a>
                   </h3>
 
                   <p class="card-text">
@@ -218,7 +218,7 @@
                 <div class="card-content">
 
                   <h3 class="h3">
-                    <a href="#" class="card-title">Thriving Roblox Community</a>
+                    <a href="https://www.roblox.com/groups/6613107/aFz-Team-Indonesia#!/about" class="card-title">Thriving Roblox Community</a>
                   </h3>
 
                   <p class="card-text">
@@ -243,7 +243,7 @@
                 <div class="card-content">
 
                   <h3 class="h3">
-                    <a href="#" class="card-title">Engaging Roblox Events & Tournaments</a>
+                    <a href="https://www.roblox.com/groups/6613107/aFz-Team-Indonesia#!/about" class="card-title">Engaging Roblox Events & Tournaments</a>
                   </h3>
 
                   <p class="card-text">
@@ -320,12 +320,13 @@
           <div class="banner-wrapper">
 
             <figure class="features-banner one">
-              <img src="./assets/images/dc.png" width="600" height="500" loading="lazy" alt="features image"
+              <img src="./assets/images/mabar1.png" width="436" height="311" loading="lazy" alt="features image"
                 class="w-100">
             </figure>
+            <br><br>
 
             <figure class="features-banner two">
-              <img src="./assets/images/dc.png" width="436" height="311" loading="lazy" alt="features image"
+              <img src="./assets/images/mabar2.png" width="436" height="311" loading="lazy" alt="features image"
                 class="w-100">
             </figure>
 
@@ -358,7 +359,7 @@
               <div class="about-card about-card-1">
 
                 <figure class="card-banner">
-                  <img src="./assets/images/about-img-1.svg" width="94" height="94" loading="lazy"
+                  <img src="./assets/images/games.png" width="94" height="94" loading="lazy"
                     alt="Automated Ticket Routing">
                 </figure>
 
@@ -388,7 +389,7 @@
               <div class="about-card about-card-2">
 
                 <figure class="card-banner">
-                  <img src="./assets/images/roblox-logo.gif" width="94" height="94" loading="lazy"
+                  <img src="./assets/images/Roblox-Logo.png" width="94" height="94" loading="lazy"
                     alt="Workflow Automation">
                 </figure>
 
@@ -417,7 +418,7 @@
               <div class="about-card about-card-3">
 
                 <figure class="card-banner">
-                  <img src="./assets/images/about-img-3.svg" width="94" height="94" loading="lazy"
+                  <img src="./assets/images/chat.png" width="94" height="94" loading="lazy"
                     alt="Automated Callback">
                 </figure>
 
@@ -429,7 +430,7 @@
                   </h3>
 
                   <p class="card-text">
-                    Chat with friends and get Roblox tips & tricks. </p>
+                    Chat with friends and get New friends. </p>
 
                   <!--                   <a href="#" class="btn-link">
                           <span class="span">Learn More</span>
@@ -500,7 +501,7 @@
         <div class="container">
 
           <figure class="stats-banner">
-            <img src="./assets/images/Roblox-Logo.png" width="619" height="482" loading="lazy" alt="stats"
+            <img src="./assets/images/statistic.png" width="619" height="482" loading="lazy" alt="stats"
               class="w-100">
           </figure>
 
@@ -508,7 +509,7 @@
 
             <li class="stats-item purple">
               <h3 class="item-title">
-                270000
+                280000
                 <span class="span">Members</span>
               </h3>
 
@@ -596,7 +597,7 @@
       <div class="container">
 
         <p class="copyright">
-          &copy; 2024 <span class="span">aFz Team</span>. All rights reserved by <a href="#"
+          &copy; 2024 <span class="span">aFz Team</span>. All rights reserved by <a href="https://ezioportfolio.vercel.app/"
             class="copyright-link">ezio</a>
         </p>
 
